<resources>
    <string name="app_name">footballteam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="introduzione">L\'applicazione per veri allenatori</string>
    <string name="home">Home</string>
    <string name="atleti">Atleti</string>
    <string name="personale">Personale</string>
    <string name="chat">Chat</string>
    <string name="Registrati"> Non hai un account? <b>Registrati</b> </string>
    <string name="invalid_email">email non valida, prego riprovare</string>
    <string name="invalid_password">la password deve contenere almeno 4 caratteri</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="pulsante_di_aggiunta">Pulsante di aggiunta</string>
    <string name="certificazioni">Certificazioni</string>
    <string name="numero_di_telefono">Numero di telefono</string>
    <string name="data_di_nascita">Seleziona la data di nascita</string>
    <string name="cognome">Cognome</string>
    <string name="nome">Nome</string>
    <string name="risultati">Risultati</string>
    <string name="registra">Registra</string>
    <string name="aggiungi_giocatore">Aggiungi atleta</string>
    <string name="codice_fiscale">Codice Fiscale</string>
    <string name="Cognome">Cognome:</string>
    <string name="modifica">modifica</string>
    <string name="visualizza">visualizza</string>
    <string name="ruolo">Ruolo</string>
    <string name="foto_profilo">Foto profilo</string>
    <string name="dataNascita">data di nascita</string>
    <string name="telefono">telefono</string>
    <string name="telefono1">telefono:</string>
    <string name="risultati1">risultati:</string>
    <string name="ruolo1">ruolo:</string>
    <string name="cognome1">cognome:</string>
    <string name="certificati1">certificati:</string>
    <string name="nome1">nome:</string>
    <string name="cfV">CF:</string>
    <string name="cfProva">XXXXXXXXXXXXXXX</string>
    <string name="inserisci_qui_il_tuo_messaggio">inserisci qui il tuo messaggio</string>
    <string name="stai_scrivendo_a">Stai scrivendo a</string>
    <string name="ciao_sono_il_mister_ti_scrivo_per">Ciao sono il mister, ti scrivo per...</string>
    <string name="invia">invia</string>
    <string name="Hello">Ciao Allenatore</string>
    <string name="sign_out">Sign Out</string>
    <string-array name="Ruoli" >
        <item>Portiere</item>
        <item>Difensore</item>
        <item>Centrocampista</item>
        <item>Attaccante</item>
    </string-array>
</resources>