<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp" >
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.register_player_fragment">

    <EditText
        android:id="@+id/nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="name"
        android:background="@drawable/tv_contorno"
        android:drawableStart="@drawable/ic_username"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/cognome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/immagine" />

    <EditText
        android:id="@+id/cognome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="name"
        android:background="@drawable/tv_contorno"
        android:drawableStart="@drawable/ic_username"
        android:ems="10"
        android:hint="@string/cognome"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/dataNascita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome" />

    <EditText
        android:id="@+id/cf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/tv_contorno"
        android:drawableStart="@drawable/ic_baseline_credit_card_24"
        android:ems="10"
        android:hint="@string/codice_fiscale"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataNascita" />

    <TextView
        android:id="@+id/dataNascita"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/tv_contorno"
        android:drawableStart="@drawable/ic_baseline_calendar_today_24"
        android:ems="10"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/data_di_nascita"
        app:layout_constraintBottom_toTopOf="@+id/cf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cognome" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="phone"
        android:background="@drawable/tv_contorno"
        android:drawableStart="@drawable/ic_baseline_local_phone_24"
        android:ems="10"
        android:hint="@string/numero_di_telefono"
        android:inputType="phone"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/ruolo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cf" />

    <EditText
        android:id="@+id/certificazione"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/tv_contorno"
        android:drawableStart="@drawable/ic_baseline_check_24"
        android:ems="10"
        android:hint="@string/certificazioni"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/risultati" />

    <EditText
        android:id="@+id/risultati"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/tv_contorno"
        android:drawableStart="@drawable/ic_baseline_trending_up_24"
        android:ems="10"
        android:hint="@string/risultati"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/certificazione"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ro" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ro"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:inputType="none"
        app:layout_constraintBottom_toTopOf="@+id/risultati"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" >
        <AutoCompleteTextView
            android:id="@+id/ruolo"
            android:background="@drawable/tv_contorno"
            android:drawableStart="@drawable/ic_baseline_sports_24"
            android:padding="15dp"

            android:text="@string/ruolo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
             />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_backgroung"
        android:padding="15dp"
        android:text="@string/registra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/certificazione" />

    <ImageView
        android:id="@+id/immagine"
        android:layout_width="124dp"
        android:layout_height="129dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/foto_profilo"
        app:layout_constraintBottom_toTopOf="@+id/nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_24" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>